# bonsAI

./: .gitignore  azure-pipelines.yml  bonsAI.py  bonsAI.py~ffdb992b60fb75eda8a7af1b230afb1d9bd68a8d  botv1.0.py  embedtest.py  keep_alive.py  main.py  pyproject.toml  settings.py  utils.py  your_bot.py
commands/: aimodenable.py
events/: aimod.py
