[tool.poetry]
name = "repl_python3_bonsAI-1"
version = "0.1.0"
description = ""
authors = ["lmaobadatmath <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
ratelimit = "^2.2.1"
discord-components = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
